src/test/ui/issues/issue-40402-ref-hints/issue-40402-2.stderr
error[E0507]: cannot move out of indexed content
  --> $DIR/issue-40402-2.rs:5:18
   |
LL |     let (a, b) = x[0];
   |          -  -    ^^^^ cannot move out of indexed content
   |          |  |
   |          |  ...and here (use `ref b` or `ref mut b`)
   |          hint: to prevent move, use `ref a` or `ref mut a`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
